Implemented first stage of testing, unstable build, the test fails and the game loop never closes, must implement semaphore + event queue to properly signal game loop exit

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,6 +45,7 @@ target_include_directories (
 	SheepyEngine INTERFACE ${SOURCE_DIRECTORY}
 )
 
+link_directories(${CMAKE_CURRENT_BINARY_DIR})
 add_executable (SheepyEngineTest ${TEST_SOURCES})
 
 target_link_libraries (SheepyEngineTest SheepyEngine Catch)
